// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`items.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
- 123
- 456
- 789

=====================================output=====================================
- 123
- 456
- 789

================================================================================
`;

exports[`items.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
- 123
- 456
- 789

=====================================output=====================================
- 123
- 456
- 789

================================================================================
`;

exports[`middle-comment.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!set # comment
- 123

=====================================output=====================================
!!set # comment
- 123

================================================================================
`;

exports[`middle-comment.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
!!set # comment
- 123

=====================================output=====================================
!!set # comment
- 123

================================================================================
`;

exports[`middle-comments.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!set # comment 1
# comment 2
- 123

=====================================output=====================================
!!set
# comment 1
# comment 2
- 123

================================================================================
`;

exports[`middle-comments.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
!!set # comment 1
# comment 2
- 123

=====================================output=====================================
!!set
# comment 1
# comment 2
- 123

================================================================================
`;

exports[`nested.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
- 1
- - 2-1
  - 2-2
- - - 3-1-1
    - 3-2-1

=====================================output=====================================
- 1
- - 2-1
  - 2-2
- - - 3-1-1
    - 3-2-1

================================================================================
`;

exports[`nested.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
- 1
- - 2-1
  - 2-2
- - - 3-1-1
    - 3-2-1

=====================================output=====================================
- 1
- - 2-1
  - 2-2
- - - 3-1-1
    - 3-2-1

================================================================================
`;

exports[`null-item.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
-

=====================================output=====================================
-

================================================================================
`;

exports[`null-item.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
-

=====================================output=====================================
-

================================================================================
`;

exports[`props.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
--- !!set &anchor
- 123
- 456

=====================================output=====================================
---
!!set &anchor
- 123
- 456

================================================================================
`;

exports[`props.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
--- !!set &anchor
- 123
- 456

=====================================output=====================================
---
!!set &anchor
- 123
- 456

================================================================================
`;

exports[`props-in-map.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a: !!set &anchor
- 123
- 456

=====================================output=====================================
a: !!set &anchor
  - 123
  - 456

================================================================================
`;

exports[`props-in-map.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
a: !!set &anchor
- 123
- 456

=====================================output=====================================
a: !!set &anchor
    - 123
    - 456

================================================================================
`;
